# et-micc-dev

./: .bumpversion-et-micc.cfg  .bumpversion.cfg  .gitignore  API.rst  APPS.rst  HISTORY.rst  Makefile  README.rst  micc.json  publish.sh  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst
et_micc_dev/: __init__.py  __version__.py  align_versions.py  cli_publish.py
tests/: __init__.py  test_cli_publish.py  test_et_micc_dev.py
