[tool.poetry]
name = "et-micc-dev"
version = "0.1.1"
description = "<Enter a one-sentence description of this project here.>"
authors = ["Engelbert Tijskens <engelbert.tijskens@uantwerpen.be>"]
license = "MIT"

readme = 'README.rst'

repository = "https://github.com/etijskens/et-micc-dev"
homepage = "https://github.com/etijskens/et-micc-dev"

keywords = ['packaging', 'poetry']

[tool.poetry.dependencies]
python = "^3.7"
bump2version = "^0.5.11"
cmake = "^3.15.3"
pygit2 = "^0.28.2"
click = "^7.0"
et-micc = "^0.9.18"

[tool.poetry.dev-dependencies]
pytest = "^4.4.2"

[tool.poetry.scripts]
publish = "et_micc_dev:cli_publish.main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
